crud: break long words to prevent overflow

--- a/src/BaseBundle/Resources/scss/app.scss
+++ b/src/BaseBundle/Resources/scss/app.scss
@@ -36,3 +36,9 @@
     }
   }
 }
+
+tbody {
+  td {
+    word-break: break-word;
+  }
+}
